03.08.2016:

Features:

* Homegear can now listen on ports lower than 1025 when started as root but running as user.

02.08.2016:

Features:

* New settings to set permissions on data and script directory.

01.08.2016:

Features:

* HomeMatic BidCoS: Only set PRESS_LONG of remotes once on continuous press.

Errors:

* MQTT packets were not correctely processed if multiple MQTT packets were sent together in one TCP packet.

28.07.2016:

* Philips hue: Polling interval is now settable.

27.07.2016:

* Changes to MQTT to support three different payload types (plain, JSON array and JSON object) for values (see doc).

26.07.2016:

* Added option "-l" and CLI command "lifetick"
* Sonos: Improvements to TTS

18.07.2016:

Features:

* Sonos: Improved PLAY_AUDIO_FILE and PLAY_TTS
	* The following title in playlist does not wrongly start to play anymore
	* Volume is set on grouped speakers now, too
* Script engine: Family settings in database can now be deleted (Homegear::deleteFamilySetting)

17.07.2016:

Features:

* Added RPC method "ping" and "pong" event
* Sonos: Ivona TTS access and secret key are now settable from config file
* Script engine: Family settings can now be fetched and saved (Homegear::getFamilySetting and Homegear::setFamilySetting)

14.07.2016

Features:

* Added support for family and interface settings in database
	* Settings can be saved and read from database now
* Philips hue: Login data is now stored in database
* Philips hue: Added parameters TRANSITION_TIME, FAST_STATE and FAST_BRIGHTNESS

08.07.2016

Features:

* Added ANSI converter
* Strings from HomeMatic CCU are now converted from ANSI to UTF-8
* Sonos: Added variables "ADD_SPEAKER_BY_SERIAL" and "REMOVE_SPEAKER_BY_SERIAL" to link speakers.

07.07.2016

Features:

* Sonos: Added variables "ADD_SPEAKER" and "REMOVE_SPEAKER" to link speakers more easily and "IS_MASTER" to find out if a speaker is the master of a group or not.

06.07.2016

Errors:
