@@ -23,6 +23,15 @@ webServer = true
 # Default: /var/lib/homegear/www
 contentPath = /var/lib/homegear/www/rpc
 
+# Default: contentPathPermissions = 550
+# contentPathPermissions = 550
+
+# Default: contentPathUser =
+# contentPathUser = homegear
+
+# Default: contentPathGroup =
+# contentPathGroup = homegear
+
 # Enable Homegear's build-in WebSocket server on this port
 # WARNING: Enabling Websockets without authentication is a high security risk!
 # So make sure, webSocketAuthType is not set to none!
@@ -70,6 +79,15 @@ webServer = true
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
 contentPath = /var/lib/homegear/www/rpc
+
+# Default: contentPathPermissions = 550
+# contentPathPermissions = 550
+
+# Default: contentPathUser = 
+# contentPathUser = homegear
+
+# Default: contentPathGroup = 
+# contentPathGroup = homegear
 
 # Enable Homegear's build-in WebSocket server on this port
 # WARNING: Enabling Websockets without authentication is a high security risk!
@@ -124,6 +142,15 @@ webServer = true
 # Default: /var/lib/homegear/www
 contentPath = /var/lib/homegear/www/rpc
 
+# Default: contentPathPermissions = 550
+# contentPathPermissions = 550
+
+# Default: contentPathUser = 
+# contentPathUser = homegear
+
+# Default: contentPathGroup = 
+# contentPathGroup = homegear
+
 # Enable Homegear's build-in WebSocket server on this port
 # Default: false
 webSocket = true
@@ -175,6 +202,15 @@ validUsers = homegear
 # Default: /var/lib/homegear/www
 #contentPath = /var/lib/homegear/www
 
+# Default: contentPathPermissions = 550
+# contentPathPermissions = 550
+
+# Default: contentPathUser = 
+# contentPathUser = homegear
+
+# Default: contentPathGroup =
+# contentPathGroup = homegear
+
 # Set ssl to "true" to enable SSL support
 #ssl = false
 
@@ -207,6 +243,15 @@ validUsers = homegear
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
 #contentPath = /var/lib/homegear/www
+
+# Default: contentPathPermissions = 550
+# contentPathPermissions = 550
+
+# Default: contentPathUser = 
+# contentPathUser = homegear
+
+# Default: contentPathGroup =
+# contentPathGroup = homegear
 
 # Set ssl to "true" to enable SSL support
 #ssl = true
